fix heights and spacing of navbar elements

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -4,18 +4,19 @@
 }
 
 .navbar-grid {
+  height: 3.5rem;
   display: grid;
-  grid-template-columns: 3.5rem 1fr 10rem;
+  grid-template-columns: min-content 1fr 10rem;
   grid-template-areas: "home space links"
 }
 
 .navbar-home {
-  margin: 1.25rem 0;
+  margin: auto 0;
   grid-area: home;
 }
 
 .navbar-links {
-  margin: 1.25rem 0;
+  margin: auto 0;
   grid-area: links;
   text-align: right;
 }
